--- a/src/assets/styles/mixins.styl
+++ b/src/assets/styles/mixins.styl
@@ -1,4 +1,9 @@
-ellipsis() // 多余yincang
+ellipsis() // 多余隐藏
   overflow: hidden
   white-space: nowrap
   text-overflow: ellipsis
+  
+  bg-image($url)
+    background-image url('images/'+$url+"@2x.png")
+    @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
+        background-image url('images/'+$url+"@3x.png")
