--- a/src/assets/styles/mixins.styl
+++ b/src/assets/styles/mixins.styl
@@ -2,6 +2,13 @@ ellipsis() // 多余隐藏
   overflow: hidden
   white-space: nowrap
   text-overflow: ellipsis
+
+ellipsis-row($num) // 几行之后隐藏
+  overflow:hidden
+  text-overflow:ellipsis
+  display:-webkit-box
+  -webkit-box-orient:vertical
+  -webkit-line-clamp:$num
   
   bg-image($url)
     background-image url('images/'+$url+"@2x.png")
